@@ -466,7 +466,7 @@ function TODO($msg) { echo "TODO: ".$msg.SBR; }  // DEBUG INFO!!!
 				$tab->addOption('id','msg_messages');
 				$tab->addOption('style','width: 100%;');
 
-				if(isset($msg_tab) && is_null($errmsg)){					
+				if(isset($msg_tab) && $bool){					
 					$tab->addOption('style','display: none;');
 				}
 
